menifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/ng2cc/nginx_ttest:release
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: ghcr.io/jaehyuk-lee/nodejs-test:release
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
