menifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: myapp
  name: myapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: myapp-alb
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:637423369403:certificate/2200f535-e90b-4002-868f-4f560ebc9e1e
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/cors-enabled: "true"
    # alb.ingress.kubernetes.io/cors-allow-origin: "*"
    # alb.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    # alb.ingress.kubernetes.io/cors-allow-headers: "origin, content-type, accept"
    # alb.ingress.kubernetes.io/cors-max-age: "3600"
  labels:
    app: web

spec:
  ingressClassName: alb
  rules:
    - host: myapp-alb-227780076.ap-northeast-1.elb.amazonaws.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          # - path: /nodejs
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: nodejs-service
          #       port:
          #         number: 3000
